Fixed word-wrapping in CLI View

--- a/less/style.less
+++ b/less/style.less
@@ -23,6 +23,7 @@ body {
   }
 }
 pre, td, th, p, div { color:#FFF; font-family:"Courier New",Courier,monospace; font-size:1em; }
+p { word-wrap: break-word; }
 div#screen {
   height:99%;
   margin:2px;
